--- a/upload.html
+++ b/upload.html
@@ -252,8 +252,8 @@
     const previewVideo = document.getElementById("preview-video");
     const loadingOverlay = document.getElementById("loading-overlay");
 
-    const CLOUDINARY_CLOUD_NAME = "your-cloud-name"; // Replace with your Cloudinary cloud name
-    const CLOUDINARY_UPLOAD_PRESET = "your-upload-preset"; // Replace with your unsigned upload preset
+    const CLOUDINARY_CLOUD_NAME = "dqkujefxj"; // Replace with your Cloudinary cloud name
+    const CLOUDINARY_UPLOAD_PRESET = "banter_box"; // Replace with your unsigned upload preset
 
     function showLoading() { loadingOverlay.classList.remove("hidden"); }
     function hideLoading() { loadingOverlay.classList.add("hidden"); }
