--- a/index.html
+++ b/index.html
@@ -117,10 +117,6 @@
       50% { opacity: 1; transform: translateY(-3px); }
     }
 
-    .fab {
-      box-shadow: 0 0 10px var(--glow);
-    }
-
     .welcome-container {
       position: absolute;
       top: 50%;
@@ -158,17 +154,22 @@
       opacity: 0.5;
     }
 
-    .speech-toggle-container {
+    .toggle-container {
       position: fixed;
       top: 1rem;
       right: 1rem;
       z-index: 20;
+      display: flex;
+      gap: 1rem;
     }
   </style>
 </head>
 <body data-theme="dark">
   <main class="chat-container p-4 flex flex-col h-[calc(100vh-8rem)] max-w-3xl mx-auto" id="chat-container">
-    <div class="speech-toggle-container">
+    <div class="toggle-container">
+      <button id="theme-toggle" class="text-[var(--accent)] hover:scale-110 focus:outline focus:outline-2 focus:outline-[var(--focus)]" aria-label="Toggle theme">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
+      </button>
       <button id="speech-toggle" class="text-[var(--accent)] hover:scale-110 focus:outline focus:outline-2 focus:outline-[var(--focus)]" aria-label="Toggle speech" aria-pressed="true">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="speech-on"><path d="M11 5L6 9H2v6h4l5 4V5zM19.07 4.93a10 10 0 010 14.14M15.54 8.46a5 5 0 010 7.07"/></svg>
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="speech-off hidden"><path d="M11 5L6 9H2v6h4l5 4V5zM22 9l-6 6M16 9l6 6"/></svg>
@@ -180,7 +181,6 @@
         <canvas id="nebula-canvas" class="nebula-canvas"></canvas>
       </div>
       <div class="welcome-message text-xl font-semibold text-center" id="welcome-message">Hey! I'm Vynix AI. What's on your mind?</div>
-      <button id="replay-button" class="mt-4 bg-gradient-to-r from-[var(--primary)] to-[var(--accent)] text-white px-4 py-2 rounded-lg hover:scale-105 focus:outline focus:outline-2 focus:outline-[var(--focus)] transition" aria-label="Replay welcome message">Replay</button>
     </div>
     <div class="chat-messages flex-1 overflow-y-auto flex flex-col gap-4 pb-20" id="chat-messages" aria-live="polite" role="log"></div>
     <div class="chat-input-container fixed bottom-6 left-4 right-4 max-w-3xl mx-auto bg-[var(--card-bg)] border border-[var(--border)] rounded-full shadow-xl flex items-center p-2 z-20">
@@ -191,42 +191,9 @@
     </div>
   </main>
 
-  <aside id="conversation-sidebar" class="fixed top-0 left-0 h-full w-16 bg-[var(--card-bg)] border-r border-[var(--border)] z-20 flex flex-col overflow-hidden md:hover:w-72 transition-w duration-300" role="complementary" aria-label="Conversations">
-    <div class="user-avatar flex items-center p-4 border-b border-[var(--border)] gap-3">
-      <div class="w-10 h-10 rounded-full bg-gradient-to-r from-[var(--primary)] to-[var(--accent)] flex items-center justify-center text-white font-bold text-lg" id="user-avatar-img">U</div>
-      <span class="user-avatar-name hidden md:hover:block font-medium truncate" id="user-avatar-name">User</span>
-    </div>
-    <div class="sidebar-header flex justify-between items-center p-4 border-b border-[var(--border)] hidden md:hover:flex">
-      <h2 class="text-lg font-semibold">Chats</h2>
-      <button id="theme-toggle" class="text-[var(--accent)] hover:scale-110 focus:outline focus:outline-2 focus:outline-[var(--focus)]" aria-label="Toggle theme">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
-      </button>
-    </div>
-    <div id="conversation-list" class="flex-1 overflow-y-auto p-4"></div>
-    <button id="new-conversation-button" class="bg-gradient-to-r from-[var(--primary)] to-[var(--accent)] text-white p-3 m-4 rounded-lg font-medium flex items-center justify-center gap-2 hover:scale-105 focus:outline focus:outline-2 focus:outline-[var(--focus)] transition" aria-label="New conversation">
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/><path d="M12 8v4m-2 2h4"/></svg>
-      <span class="hidden md:hover:inline">New Chat</span>
-    </button>
-  </aside>
-
-  <button id="new-conversation-fab" class="fab fixed bottom-20 right-1/2 translate-x-1/2 bg-gradient-to-r from-[var(--primary)] to-[var(--accent)] text-white rounded-full w-14 h-14 shadow-lg flex items-center justify-center pulse-glow z-40 md:hidden" aria-label="Open conversations">
-    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/><path d="M12 8v4m-2 2h4"/></svg>
-  </button>
-
-  <div id="delete-dialog" class="fixed inset-0 bg-black/60 hidden flex items-center justify-center z-50" role="dialog" aria-modal="true" aria-labelledby="delete-dialog-title">
-    <div class="bg-[var(--card-bg)] p-6 rounded-xl shadow-xl max-w-sm w-full text-center">
-      <h3 id="delete-dialog-title" class="text-lg font-semibold mb-4">Delete Chat?</h3>
-      <div class="flex gap-4 justify-center">
-        <button id="dialog-confirm" class="bg-[var(--accent)] text-white px-4 py-2 rounded-lg hover:scale-105 focus:outline focus:outline-2 focus:outline-[var(--focus)] transition">Delete</button>
-        <button id="dialog-cancel" class="bg-[var(--border)] text-[var(--text-primary)] px-4 py-2 rounded-lg hover:scale-105 focus:outline focus:outline-2 focus:outline-[var(--focus)] transition">Cancel</button>
-      </div>
-    </div>
-  </div>
-
   <script>
     const state = {
-      conversations: JSON.parse(localStorage.getItem('conversations') || '{}'),
-      currentId: null,
+      messages: [],
       theme: localStorage.getItem('theme') || 'dark',
       apiKey: 'YOUR_GEMINI_API_KEY_HERE',
       aiAvatar: 'https://i.postimg.cc/ZR0jj3Yr/Black-and-White-Minimalist-Simple-Modern-Technology-AI-Logo-20250824-182710-0000.png',
@@ -242,18 +209,8 @@
       sendButton: document.getElementById('send-button'),
       themeToggle: document.getElementById('theme-toggle'),
       speechToggle: document.getElementById('speech-toggle'),
-      replayButton: document.getElementById('replay-button'),
-      sidebar: document.getElementById('conversation-sidebar'),
-      newConvoBtn: document.getElementById('new-conversation-button'),
-      newConvoFab: document.getElementById('new-conversation-fab'),
       welcomeContainer: document.getElementById('welcome-container'),
       welcome: document.getElementById('welcome-message'),
-      userNameEl: document.getElementById('user-avatar-name'),
-      userInitial: document.getElementById('user-avatar-img'),
-      convoList: document.getElementById('conversation-list'),
-      deleteDialog: document.getElementById('delete-dialog'),
-      dialogConfirm: document.getElementById('dialog-confirm'),
-      dialogCancel: document.getElementById('dialog-cancel'),
       nebulaContainer: document.getElementById('nebula-container'),
       nebulaCanvas: document.getElementById('nebula-canvas'),
     };
@@ -272,12 +229,11 @@
       window.speechSynthesis.cancel(); // Clear existing utterances
       const utterance = new SpeechSynthesisUtterance(isWelcome ? "Hey, I'm Vynix AI... What's on your mind?" : text);
       utterance.lang = 'en-US';
-      // Select a natural voice (e.g., Google US English if available)
       const voices = window.speechSynthesis.getVoices();
       const naturalVoice = voices.find(v => v.name.includes('Google') && v.lang === 'en-US') || voices.find(v => v.lang === 'en-US');
       if (naturalVoice) utterance.voice = naturalVoice;
       utterance.volume = 1;
-      utterance.rate = 0.9; // Slightly slower for natural feel
+      utterance.rate = 0.9;
       utterance.pitch = 1;
       if (isWelcome) state.hasSpokenWelcome = true;
       window.speechSynthesis.speak(utterance);
@@ -340,32 +296,10 @@
       }
     });
 
-    elements.replayButton.addEventListener('click', () => {
-      if (state.speechEnabled) {
-        speakText("Hey, I'm Vynix AI... What's on your mind?", true);
-      }
-    });
-
     elements.themeToggle.addEventListener('click', () => {
       state.theme = state.theme === 'dark' ? 'light' : 'dark';
       document.body.dataset.theme = state.theme;
       localStorage.setItem('theme', state.theme);
-    });
-
-    elements.newConvoFab.addEventListener('click', () => {
-      if (!elements.sidebar.classList.contains('translate-x-0')) {
-        elements.sidebar.classList.add('translate-x-0');
-      } else {
-        state.currentId = null;
-        state.hasSpokenWelcome = false;
-        elements.chatMessages.innerHTML = '';
-        elements.welcomeContainer.classList.remove('hidden');
-        elements.sidebar.classList.remove('translate-x-0');
-        startNebulaAnimation();
-        if (state.speechEnabled) {
-          speakText("Hey, I'm Vynix AI... What's on your mind?", true);
-        }
-      }
     });
 
     function renderMessage(msg, id) {
@@ -418,11 +352,8 @@
     }
 
     async function appendMessage(text, sender, displayName) {
-      if (!state.currentId) state.currentId = Date.now().toString();
-      if (!state.conversations[state.currentId]) state.conversations[state.currentId] = {title: text.slice(0, 30) + (text.length > 30 ? '...' : ''), timestamp: Date.now(), messages: []};
       const msg = {id: Date.now().toString(), text, sender, displayName, timestamp: Date.now()};
-      state.conversations[state.currentId].messages.push(msg);
-      localStorage.setItem('conversations', JSON.stringify(state.conversations));
+      state.messages.push(msg);
       elements.welcomeContainer.classList.add('hidden');
       stopNebulaAnimation();
       if (sender === 'user') {
@@ -456,45 +387,16 @@
         };
         type();
       }
-      loadConversations();
     }
 
-    function loadConversations() {
-      elements.convoList.innerHTML = '';
-      Object.entries(state.conversations).sort((a, b) => b[1].timestamp - a[1].timestamp).forEach(([id, convo]) => {
-        const item = document.createElement('div');
-        item.className = 'conversation-item p-3 border-b border-[var(--border)] cursor-pointer flex items-center gap-3 hover:bg-[var(--highlight)] focus:bg-[var(--highlight)] outline-none transition';
-        item.dataset.id = id;
-        item.role = 'button';
-        item.tabIndex = 0;
-        item.ariaLabel = `Open: ${convo.title}`;
-        item.innerHTML = `<svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/></svg><span class="conversation-title flex-1 truncate text-sm">${convo.title}</span>`;
-        const delBtn = document.createElement('button');
-        delBtn.className = 'delete-convo-btn text-[var(--error)] hover:scale-110 focus:outline focus:outline-2 focus:outline-[var(--focus)] hidden md:hover:flex';
-        delBtn.innerHTML = '<svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 6h18"/><path d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"/></svg>';
-        delBtn.ariaLabel = 'Delete';
-        delBtn.addEventListener('click', e => { e.stopPropagation(); showDeleteDialog(id); });
-        item.append(delBtn);
-        item.addEventListener('click', () => loadConversation(id));
-        item.addEventListener('keydown', e => e.key === 'Enter' && loadConversation(id));
-        elements.convoList.appendChild(item);
-      });
-    }
-
-    function loadConversation(id) {
-      state.currentId = id;
+    function clearChat() {
+      state.messages = [];
+      state.hasSpokenWelcome = false;
       elements.chatMessages.innerHTML = '';
-      state.conversations[id]?.messages.forEach(msg => renderMessage(msg, msg.id));
-      elements.welcomeContainer.classList.toggle('hidden', !!state.conversations[id]?.messages.length);
-      elements.sidebar.classList.remove('translate-x-0');
-      if (state.conversations[id]?.messages.length) {
-        stopNebulaAnimation();
-      } else {
-        state.hasSpokenWelcome = false;
-        startNebulaAnimation();
-        if (state.speechEnabled) {
-          speakText("Hey, I'm Vynix AI... What's on your mind?", true);
-        }
+      elements.welcomeContainer.classList.remove('hidden');
+      startNebulaAnimation();
+      if (state.speechEnabled) {
+        speakText("Hey, I'm Vynix AI... What's on your mind?", true);
       }
     }
 
@@ -537,65 +439,26 @@
       }
     };
     elements.sendButton.addEventListener('click', send);
-    elements.chatInput.addEventListener('keypress', e => e.key === 'Enter' && send());
-
-    elements.newConvoBtn.addEventListener('click', () => {
-      state.currentId = null;
-      state.hasSpokenWelcome = false;
-      elements.chatMessages.innerHTML = '';
-      elements.welcomeContainer.classList.remove('hidden');
-      elements.sidebar.classList.remove('translate-x-0');
-      startNebulaAnimation();
-      if (state.speechEnabled) {
-        speakText("Hey, I'm Vynix AI... What's on your mind?", true);
-      }
-    });
-
-    let pendingId = null;
-    function showDeleteDialog(id) {
-      pendingId = id;
-      elements.deleteDialog.classList.remove('hidden');
-      elements.dialogConfirm.focus();
-    }
-    elements.dialogCancel.addEventListener('click', () => {
-      elements.deleteDialog.classList.add('hidden');
-      pendingId = null;
-    });
-    elements.dialogConfirm.addEventListener('click', () => {
-      elements.deleteDialog.classList.add('hidden');
-      if (pendingId) {
-        delete state.conversations[pendingId];
-        localStorage.setItem('conversations', JSON.stringify(state.conversations));
-        if (state.currentId === pendingId) {
-          state.currentId = null;
-          state.hasSpokenWelcome = false;
-          elements.chatMessages.innerHTML = '';
-          elements.welcomeContainer.classList.remove('hidden');
-          startNebulaAnimation();
-          if (state.speechEnabled) {
-            speakText("Hey, I'm Vynix AI... What's on your mind?", true);
-          }
+    elements.chatInput.addEventListener('keypress', e => {
+      if (e.key === 'Enter') {
+        if (e.shiftKey) {
+          clearChat();
+        } else {
+          send();
         }
-        loadConversations();
-        showToast('Chat deleted', 'success');
-        pendingId = null;
       }
     });
 
     document.body.dataset.theme = state.theme;
-    elements.userNameEl.textContent = state.userName;
-    elements.userInitial.textContent = state.userName[0].toUpperCase();
     elements.speechToggle.setAttribute('aria-pressed', state.speechEnabled);
     elements.speechToggle.querySelector('.speech-on').classList.toggle('hidden', !state.speechEnabled);
     elements.speechToggle.querySelector('.speech-off').classList.toggle('hidden', state.speechEnabled);
-    loadConversations();
     startNebulaAnimation();
     if (state.speechEnabled) {
       speakText("Hey, I'm Vynix AI... What's on your mind?", true);
     }
     elements.chatInput.focus();
 
-    // Ensure voices are loaded before speaking
     window.speechSynthesis.onvoiceschanged = () => {
       if (state.speechEnabled && !state.hasSpokenWelcome && !elements.welcomeContainer.classList.contains('hidden')) {
         speakText("Hey, I'm Vynix AI... What's on your mind?", true);
