--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       min-height: 100vh;
       margin: 0;
       transition: background 0.3s ease;
+      touch-action: manipulation; /* Prevent double-tap zoom */
     }
 
     @media (prefers-reduced-motion: no-preference) {
@@ -156,29 +157,80 @@
 
     .toggle-container {
       position: fixed;
-      top: 1rem;
-      right: 1rem;
+      top: 0.5rem;
+      right: 0.5rem;
       z-index: 20;
       display: flex;
-      gap: 1rem;
+      gap: 0.5rem;
+    }
+
+    .chat-messages {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+
+    .chat-messages::-webkit-scrollbar {
+      display: none; /* Chrome, Safari */
     }
 
     .chat-input-container {
       display: flex;
       align-items: center;
       gap: 0.5rem;
+      padding: 0.5rem;
+    }
+
+    .new-chat-button {
+      position: fixed;
+      bottom: 5rem;
+      right: 1rem;
+      z-index: 20;
+    }
+
+    @media (max-width: 640px) {
+      .chat-container {
+        padding: 0.5rem;
+      }
+      .chat-messages {
+        padding-bottom: 4rem;
+      }
+      .chat-input-container {
+        bottom: 0.5rem;
+        left: 0.5rem;
+        right: 0.5rem;
+      }
+      .new-chat-button {
+        bottom: 4.5rem;
+        right: 0.5rem;
+      }
+      .toggle-container {
+        top: 0.25rem;
+        right: 0.25rem;
+      }
+      .welcome-message {
+        font-size: 1rem;
+      }
+      .message-content {
+        padding: 0.5rem;
+      }
+      .message {
+        max-width: 90%;
+      }
+      input, button {
+        font-size: 0.875rem;
+      }
     }
   </style>
 </head>
 <body data-theme="dark">
-  <main class="chat-container p-4 flex flex-col h-[calc(100vh-8rem)] max-w-3xl mx-auto" id="chat-container">
+  <main class="chat-container p-4 flex flex-col h-[calc(100vh-6rem)] max-w-3xl mx-auto" id="chat-container">
     <div class="toggle-container">
-      <button id="theme-toggle" class="text-[var(--accent)] hover:scale-110 focus:outline focus:outline-2 focus:outline-[var(--focus)]" aria-label="Toggle theme">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
+      <button id="theme-toggle" class="text-[var(--accent)] hover:scale-110 focus:outline focus:outline-2 focus:outline-[var(--focus)] p-2" aria-label="Toggle theme">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
       </button>
-      <button id="speech-toggle" class="text-[var(--accent)] hover:scale-110 focus:outline focus:outline-2 focus:outline-[var(--focus)]" aria-label="Toggle speech" aria-pressed="true">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="speech-on"><path d="M11 5L6 9H2v6h4l5 4V5zM19.07 4.93a10 10 0 010 14.14M15.54 8.46a5 5 0 010 7.07"/></svg>
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="speech-off hidden"><path d="M11 5L6 9H2v6h4l5 4V5zM22 9l-6 6M16 9l6 6"/></svg>
+      <button id="speech-toggle" class="text-[var(--accent)] hover:scale-110 focus:outline focus:outline-2 focus:outline-[var(--focus)] p-2" aria-label="Toggle speech" aria-pressed="true">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="speech-on"><path d="M11 5L6 9H2v6h4l5 4V5zM19.07 4.93a10 10 0 010 14.14M15.54 8.46a5 5 0 010 7.07"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="speech-off hidden"><path d="M11 5L6 9H2v6h4l5 4V5zM22 9l-6 6M16 9l6 6"/></svg>
       </button>
     </div>
     <div class="welcome-container" id="welcome-container">
@@ -188,16 +240,16 @@
       </div>
       <div class="welcome-message text-xl font-semibold text-center" id="welcome-message">Hey! I'm Vynix AI. What's on your mind?</div>
     </div>
-    <div class="chat-messages flex-1 overflow-y-auto flex flex-col gap-4 pb-20" id="chat-messages" aria-live="polite" role="log"></div>
-    <div class="chat-input-container fixed bottom-6 left-4 right-4 max-w-3xl mx-auto bg-[var(--card-bg)] border border-[var(--border)] rounded-full shadow-xl flex items-center p-2 z-20">
-      <button id="new-chat-button" class="bg-gradient-to-r from-[var(--primary)] to-[var(--accent)] text-white p-3 rounded-full hover:scale-105 focus:outline focus:outline-2 focus:outline-[var(--focus)] transition pulse-glow" aria-label="Start new chat">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/><path d="M12 8v4m-2 2h4"/></svg>
-      </button>
-      <input type="text" id="chat-input" class="flex-1 bg-transparent p-3 text-[var(--text-primary)] outline-none focus:ring-2 focus:ring-[var(--focus)] rounded-full" placeholder="Type your question..." aria-label="Type your question" maxlength="1000">
-      <button id="send-button" class="bg-gradient-to-r from-[var(--primary)] to-[var(--accent)] text-white p-3 rounded-full hover:scale-105 focus:outline focus:outline-2 focus:outline-[var(--focus)] transition" aria-label="Send message">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg>
+    <div class="chat-messages flex-1 overflow-y-auto flex flex-col gap-3 pb-20" id="chat-messages" aria-live="polite" role="log"></div>
+    <div class="chat-input-container fixed bottom-1 left-1 right-1 max-w-3xl mx-auto bg-[var(--card-bg)] border border-[var(--border)] rounded-full shadow-xl flex items-center z-20">
+      <input type="text" id="chat-input" class="flex-1 bg-transparent p-2 text-[var(--text-primary)] outline-none focus:ring-2 focus:ring-[var(--focus)] rounded-full" placeholder="Type your question..." aria-label="Type your question" maxlength="1000">
+      <button id="send-button" class="bg-gradient-to-r from-[var(--primary)] to-[var(--accent)] text-white p-2.5 rounded-full hover:scale-105 focus:outline focus:outline-2 focus:outline-[var(--focus)] transition" aria-label="Send message">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg>
       </button>
     </div>
+    <button id="new-chat-button" class="new-chat-button bg-gradient-to-r from-[var(--primary)] to-[var(--accent)] text-white p-2.5 rounded-full hover:scale-105 focus:outline focus:outline-2 focus:outline-[var(--focus)] transition pulse-glow" aria-label="Start new chat">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/><path d="M12 8v4m-2 2h4"/></svg>
+    </button>
   </main>
 
   <script>
@@ -227,7 +279,7 @@
 
     function showToast(message, type = 'error') {
       const toast = document.createElement('div');
-      toast.className = `fixed top-6 right-6 p-4 rounded-lg shadow-lg text-white ${type === 'error' ? 'bg-[var(--error)]' : 'bg-[var(--success)]'} slide-in`;
+      toast.className = `fixed top-4 right-4 p-3 rounded-lg shadow-lg text-white text-sm ${type === 'error' ? 'bg-[var(--error)]' : 'bg-[var(--success)]'} slide-in`;
       toast.textContent = message;
       toast.role = 'alert';
       document.body.appendChild(toast);
@@ -236,7 +288,7 @@
 
     function speakText(text, isWelcome = false) {
       if (!state.speechEnabled || window.matchMedia('(prefers-reduced-motion: reduce)').matches || !window.speechSynthesis) return;
-      window.speechSynthesis.cancel(); // Clear existing utterances
+      window.speechSynthesis.cancel();
       const utterance = new SpeechSynthesisUtterance(isWelcome ? "Hey, I'm Vynix AI... What's on your mind?" : text);
       utterance.lang = 'en-US';
       const voices = window.speechSynthesis.getVoices();
@@ -258,7 +310,8 @@
       const ctx = elements.nebulaCanvas.getContext('2d');
       elements.nebulaCanvas.width = 200;
       elements.nebulaCanvas.height = 200;
-      const particles = Array.from({length: 20}, () => ({
+      const particleCount = window.innerWidth <= 640 ? 10 : 20; // Fewer particles on mobile
+      const particles = Array.from({length: particleCount}, () => ({
         x: 100,
         y: 100,
         radius: Math.random() * 5 + 2,
@@ -330,9 +383,9 @@
       div.className = `message ${msg.sender} flex flex-col gap-2 slide-in`;
       div.role = 'listitem';
       const content = document.createElement('div');
-      content.className = 'message-content p-4 rounded-xl flex gap-3 items-start';
+      content.className = 'message-content p-3 rounded-xl flex gap-2 items-start';
       const avatar = document.createElement('div');
-      avatar.className = 'message-avatar w-9 h-9 rounded-full flex-shrink-0';
+      avatar.className = 'message-avatar w-8 h-8 rounded-full flex-shrink-0';
       if (msg.sender === 'ai') {
         const img = document.createElement('img');
         img.src = state.aiAvatar;
@@ -346,22 +399,22 @@
       }
       const body = document.createElement('div');
       const header = document.createElement('div');
-      header.className = 'message-header font-semibold text-sm';
+      header.className = 'message-header font-semibold text-xs';
       header.textContent = msg.displayName;
       const text = document.createElement('p');
-      text.className = 'text-sm';
+      text.className = 'text-xs';
       text.innerHTML = marked.parse(msg.text);
       const time = document.createElement('div');
-      time.className = 'message-timestamp text-xs text-[var(--text-secondary)] mt-1';
+      time.className = 'message-timestamp text-[0.65rem] text-[var(--text-secondary)] mt-1';
       time.textContent = new Date(msg.timestamp).toLocaleTimeString([], {hour: '2-digit', minute: '2-digit'});
       body.append(header, text, time);
       content.append(avatar, body);
       div.append(content);
       const actions = document.createElement('div');
-      actions.className = 'message-actions flex gap-4 mt-2 self-end';
+      actions.className = 'message-actions flex gap-3 mt-1 self-end';
       const copyBtn = document.createElement('button');
       copyBtn.className = 'action-btn text-[var(--text-secondary)] hover:text-[var(--accent)] transition';
-      copyBtn.innerHTML = '<svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"/></svg>';
+      copyBtn.innerHTML = '<svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"/></svg>';
       copyBtn.ariaLabel = 'Copy message';
       copyBtn.addEventListener('click', () => navigator.clipboard.writeText(msg.text).then(() => showToast('Copied!', 'success')).catch(() => showToast('Copy failed')));
       actions.append(copyBtn);
@@ -386,7 +439,7 @@
         const el = renderMessage(tempMsg, msg.id);
         const p = el.querySelector('p');
         const indicator = document.createElement('span');
-        indicator.className = 'typing-indicator inline-flex gap-1.5 ml-2';
+        indicator.className = 'typing-indicator inline-flex gap-1 ml-1';
         for (let i = 0; i < 3; i++) {
           const dot = document.createElement('span');
           dot.className = 'typing-dot';
